hphp/hack/test/typecheck/void_is_type_of_null/void_usage.php
<?hh // strict

function v(): void {}

function f(): bool {
  return 1 === v();
}
